# secstack

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  README.md  pyproject.toml
.github/workflows/: lint.yml
bottom-up-analyst/: .gitignore  README.md  SKILL.md
bottom-up-analyst/references/: guide_competitive.md  guide_normalization.md  guide_valuation.md  memo_template.md
bottom-up-analyst/references/archetypes/: compounder.md  cyclical.md  deep_value.md  hypergrowth.md  special_situation.md  turnaround.md
bottom-up-analyst/scripts/: dcf.py  epv.py
context/: CONVENTIONS.md  DECISIONS.md  MAP.md
market-scout/: .gitignore  README.md  SKILL.md  requirements.txt
market-scout/scripts/: _common.py  fetch_market_data.py  fetch_transcripts.py
pitch-like-lou/: README.md  SKILL.md
pitch-like-lou/references/corpus/: Value Investors Club _ MCI (MCPEQ).md  Value Investors Club _ NII Holdings (NIHD).md  Value Investors Club _ NVR, Inc. (NVR).md  (+4 more)
sec-edgar-skill/: .gitignore  README.md  SKILL.md  requirements.txt
sec-edgar-skill/references/: guide_core.md  guide_filings.md  guide_financials.md  guide_holdings.md  guide_ownership.md
sec-edgar-skill/scripts/: _common.py  fetch_13f_holders.py  fetch_filing.py  fetch_filings.py  fetch_insider_trades.py  list_headings.py  orient.py  parse_financials.py  test_setup.py
signal-sweep/: DEVELOPMENT.md  README.md
signal-sweep/docs/: flip_buy_difficulty_analysis.md
signal-sweep/references/: guide_screens.md
signal-sweep/scripts/: scan_conferences.py  scan_insiders.py  search_themes.py
