[project]
name = "secstack"
version = "0.1.0"
description = "US market research skills"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
# Target Python version
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Enable standard rule groups
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific rules
    "D",    # pydocstyle
]

ignore = [
    "D100", # Missing docstring in public module (we can document this, but don't force it everywhere)
    "D104", # Missing docstring in public package
    "D203", # 1 blank line required before class docstring (conflict with D211)
    "D213", # Multi-line docstring summary should start at the second line (conflict with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["bottom-up-analyst", "market-scout", "pitch-like-lou", "sec-edgar-skill", "signal-sweep"]
